--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
   
-   "@angular/animations":"^15.2.5"
+   "@angular/animations":"^15.2.5",
     "@angular/cdk": "^15.2.5",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
